apps/forgejo/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: forgejo
  namespace: forgejo
  labels:
    app: forgejo
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: forgejo
  template:
    metadata:
      labels:
        app: forgejo
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: forgejo
          image: code.forgejo.org/forgejo/forgejo:15.0.9-rootless
          ports:
            - name: http
              containerPort: 3000
            - name: ssh
              containerPort: 2222
          volumeMounts:
            - name: temp
              mountPath: /tmp
            - name: data
              mountPath: /data
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 200
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 10
          readinessProbe:
            httpGet:
              path: /api/healthz
              port: http
            initialDelaySeconds: 5
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
      volumes:
        - name: temp
          emptyDir: {}
        - name: data
          persistentVolumeClaim:
            claimName: forgejo-data
