apps/forgejo/manifests/service-ssh.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo-ssh
  namespace: forgejo
  labels:
    app: forgejo
spec:
  type: ClusterIP
  selector:
    app: forgejo
  ports:
    - name: ssh
      port: 22
      targetPort: ssh
